[package]
name = "cryptopals-set-1"
version = "0.1.0"
authors = ["Carlos Rodriguez"]

[[bin]]
name = "challenge-1"
path = "src/1-convert-hex-to-base64/main.rs"

[[bin]]
name = "challenge-2"
path = "src/2-fixed-xor/main.rs"

[[bin]]
name = "challenge-3"
path = "src/3-single-byte-xor-cipher/main.rs"

[[bin]]
name = "challenge-4"
path = "src/4-detect-single-character-xor/main.rs"

[[bin]]
name = "challenge-5"
path = "src/5-implementing-repeating-key-xor/main.rs"

[[bin]]
name = "challenge-6"
path = "src/6-break-repeating-key-xor/main.rs"

[dependencies]
base64 = "~0.6.0"
common = { path = "src/common" }
