[package]
name = "cryptopal-set-2"
version = "0.1.0"
authors = ["Carlos Rodriguez"]

[[bin]]
name = "challenge-9"
path = "src/9-implement-pkcs7-padding/main.rs"

[[bin]]
name = "challenge-10"
path = "src/10-implement-cbc-mode/main.rs"

[[bin]]
name = "challenge-11"
path = "src/11-an-ecb-cbc-detection-oracle/main.rs"

[dependencies]
base64 = "~0.6.0"
rand = "0.5"
itertools = "0.7.3"
shared = { path = "../shared" }
